[package]
name = "windows-toolkit"
build = "./build.rs"
version = "0.1.0"
edition = "2021"
authors = ["h4rl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = "1.32.0"
command-group = { version = "2.1.0", features = ["with-tokio"] }
windows = "0.51.1"
check_elevation = "0.2.4"
clap = "4.4.6"
reqwest = { version = "0.11.22", features = ["blocking"] }
clap-help = "1.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
toml = "0.8.2"
indicatif = "0.17.7"
inquire = "0.6.2"


[build-dependencies]
winresource = "0.1.17"
build-target = "0.4.0"
